--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>The application is a social network for watching movies according to your preferences and recommendations of friends</description>
 	<properties>
 		<java.version>11</java.version>
+		<junit.version>4.12</junit.version>
+		<commons-lang3.version>3.12.0</commons-lang3.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,8 +40,12 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
 		</dependency>
 	</dependencies>
 
